<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentGastos">


    <EditText
        android:id="@+id/txtCantidadGasto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="36dp"
        android:drawableRight="@android:drawable/presence_busy"
        android:ems="10"
        android:hint="@string/txtcantidadGasto"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtDescriGastos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="36dp"
        android:drawableRight="@android:drawable/btn_star_big_on"
        android:ems="10"
        android:hint="@string/txtDescriGasto"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCantidadGasto" />

    <Button
        android:id="@+id/btnGuardarGasto"
        android:layout_width="121dp"
        android:layout_height="106dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="?android:attr/textColorHighlightInverse"
        android:text="@string/ButtonguardarGasto"
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintStart_toEndOf="@+id/txtfechaGasto"
        app:layout_constraintTop_toBottomOf="@+id/txtDescriGastos" />

    <EditText
        android:id="@+id/txtfechaGasto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="39dp"
        android:ems="10"
        android:hint="@string/txtFechaGasto"
        android:inputType="date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDescriGastos" />

    <EditText
        android:id="@+id/txtHoraGasto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/txtHoraGasto"
        android:inputType="time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtfechaGasto" />
</androidx.constraintlayout.widget.ConstraintLayout>