<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarThumbHorizontal="@color/colorPrimary"
    android:scrollbarThumbVertical="@android:color/background_dark"
    tools:context=".FragmentIngresar">

    <EditText
        android:id="@+id/txtCantidadIngreso"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="36dp"

        android:drawableRight="@android:drawable/ic_input_add"
        android:ems="10"
        android:hint="@string/txtcantiIngreso"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtDescripcionIngreso"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="36dp"
        android:drawableRight="@android:drawable/btn_star_big_on"
        android:ems="10"
        android:hint="@string/txtdescriIngreso"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCantidadIngreso" />

    <Button
        android:id="@+id/btnIngresoGuardar"
        android:layout_width="121dp"
        android:layout_height="106dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="44dp"
        android:backgroundTint="?android:attr/textColorHighlight"
        android:text="@string/ButtonGuardarIngreso"
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintStart_toEndOf="@+id/txtFechaIngeso"
        app:layout_constraintTop_toBottomOf="@+id/txtDescripcionIngreso" />

    <EditText
        android:id="@+id/txtFechaIngeso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="39dp"
        android:ems="10"
        android:hint="@string/txtFechaIngreso"
        android:inputType="date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDescripcionIngreso" />

    <EditText
        android:id="@+id/txtHoraIngreso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/txtHoraingreso"
        android:inputType="time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtFechaIngeso" />
</androidx.constraintlayout.widget.ConstraintLayout>